@@ -1,3 +1,8 @@
+2006-07-18  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* java/awt/image/WritableRaster.java: Added API docs and reformatted 
+	source code.
+
 2006-07-18  Sven de Marothy  <sven@physto.se>
 
 	* java/net/Inet6Address.java:
